--- a/.bolt.yml
+++ b/.bolt.yml
@@ -1,7 +1,7 @@
 paths:
-  cache: tmp/cache
+  cache: storage/cache
   config: app/config
-  database: tmp/database
+  database: storage/database
   web: public
   themebase: public/theme
   files: public/uploads
