--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "require": {
-        "bolt/bolt": "^3.0"
+        "bolt/bolt": "3.1.5"
     },
     "minimum-stability": "beta",
     "prefer-stable": true,
