--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "require": {
-        "bolt/bolt": "3.1.*"
+        "bolt/bolt": "^3.2"
     },
     "minimum-stability": "beta",
     "prefer-stable": true,
